// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Farm can be viewed as entries 1`] = `
[
  [
    "pig",
    {
      "img": "🐖",
      "type": "animal",
    },
  ],
  [
    "cow",
    {
      "img": "🐄",
      "type": "animal",
    },
  ],
  [
    "tractor",
    {
      "img": "🚜",
      "type": "building",
    },
  ],
  [
    "farmer",
    {
      "img": "👩‍🌾",
      "type": "human",
    },
  ],
]
`;

exports[`Farm groups by type 1`] = `
{
  "animal": [
    {
      "img": "🐖",
      "name": "pig",
      "type": "animal",
    },
    {
      "img": "🐄",
      "name": "cow",
      "type": "animal",
    },
  ],
  "building": [
    {
      "img": "🚜",
      "name": "tractor",
      "type": "building",
    },
  ],
  "human": [
    {
      "img": "👩‍🌾",
      "name": "farmer",
      "type": "human",
    },
  ],
}
`;
